--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div id="content">
 
             <div class="h-screen flex items-center justify-center">
-                <div class="bg-zinc-950 py-12 px-12 mx-64 rounded-2xl">
-                    <div class="grid grid-cols-1 grid-cols-4 gap-4">
+                <div class="bg-zinc-950 lg:mx-64 md:mx-16 rounded-2xl">
+                    <div class="grid grid-cols-1 lg:grid-cols-4 lg:gap-4 sm:px-3 sm:py-3 md:px-6 md:py-6 lg:px-12 lg:py-12">
                         <div class="col-span-1 w-1/4 w-full">
                             <div>
                                 <img class="rounded-full w-36 h-auto" src="https://avatars.githubusercontent.com/u/53365858?v=4">
