Oh yeah, i forgot abt the links
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                 </a>
             </div>
             <div class="text-sm">
-                <a>Resume</a>
+                <a href="https://github.com/herobuxx/resume/blob/main/resume.pdf">Resume</a>
                 <span class="px-2">•</span>
-                <a>Mail</a>
+                <a href="mailto:herobuxx@hmil.com">Mail</a>
             </div>
         </div>
     </div>  
